--- a/pink-and-black-tumblr-tweaked.user.styl
+++ b/pink-and-black-tumblr-tweaked.user.styl
@@ -32,7 +32,7 @@ body, html {
   background: rgb(241, 173, 202);
   color:white
 }
-.sdOCZ, .YSVS3, ._qHCt, .fo_cP, .ovT1K, .f_zsT, .W9GZw .TRX6J, .iGLU3, .MV1bs .OpUw8, .j1I7U, .PmamQ .TRX6J, .YkQj_, .ZyGTE, .Qj_pr{
+.sdOCZ, .YSVS3, ._qHCt, .fo_cP, .ovT1K, .f_zsT, .W9GZw .TRX6J, .iGLU3, .MV1bs .OpUw8, .j1I7U, .PmamQ .TRX6J, .YkQj_, .ZyGTE, .Qj_pr, .PwJi6, .I_SFh, .hF8Wr{
   display: none
 }
 .I6Lwl, .HOjIH, div.FZkjV:nth-of-type(4), li.g8SYn.IYrO9:nth-of-type(3), li.g8SYn.IYrO9:nth-of-type(4), li.g8SYn.IYrO9:nth-of-type(8), span.ZQMrc:nth-of-type(3), li.jk3gM:nth-of-type(7){
