--- a/pink-and-purple-threads.user.styl
+++ b/pink-and-purple-threads.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Pink and Purple [Threads]
 @namespace      https://userstyles.world/style/13152/pink-and-purple-threads
-@version        0.1.1
+@version        0.2.0
 @description    A pink and purple theme, best used in Threads's light mode!
 @author         Bailey Lockheart
 ==/UserStyle== */
@@ -28,6 +28,14 @@
   --barcelona-threadline: #47324A;
   --barcelona-menu-outline: #47324A;
   --activity-icon-background-repost:#F7EBF7
+}
+html, .x1vfo065,.xfex06f, .xng8ra, .x1t2pt76,.xgzc8be.x1iorvi4, .x1iorvi4 .x8xoigl {
+    /*background*/
+    background-color: #f7ebf7
+}
+.xgzc8be, .x78zum5.x1t2pt76 .x78zum5.xng8ra,.x78zum5.x1t2pt76 .xfex06f.xl56j7k,.x78zum5.x1t2pt76 .xng8ra.x1ggkfyp {
+    /*posts*/
+    background-color: #f7ebf7
 }
 .x6vvqcq{ 
     /*Elevated top*/
@@ -105,13 +113,6 @@
     /*Icons*/
     color: #47324A
 }
-.x1l34066,.x1odjw0f .x1p5oq8j {
-    /*Replying*/
-    background-color: #FBC9FF;
-    border-top-left-radius: 15px;
-    padding-bottom:15px;
-    margin-bottom: -15px;
-}
 .x10b6aqq path, .xn6708d.x1n2onr6 path {
     /*Thread line*/
     color: #47324A
@@ -136,4 +137,8 @@
     /*Poll border*/
     border:solid 1.5px #47324A;
 }
+.x1lcra6a,.x14yjl9h.xz401s1, .xurb0ha .xvy4d1p, .x78zum5.xng8ra .xvy4d1p, .x120sd54,.xng8ra,.x1691je0{
+    /*sidebar*/
+    background-color:#FBC9FF
+    }    
 }
