--- a/forest-threads.user.styl
+++ b/forest-threads.user.styl
@@ -29,12 +29,21 @@
   --barcelona-menu-outline: #7D6342;
   --activity-icon-background-repost:#5B4B34
 }
+html, .x1vfo065,.xfex06f, .xng8ra, .x1t2pt76,.xgzc8be.x1iorvi4, .x1iorvi4 .x8xoigl {
+    /*background*/
+    background-color: #5b4b33
+}
+.xgzc8be, .x78zum5.x1t2pt76 .x78zum5.xng8ra,.x78zum5.x1t2pt76 .xfex06f.xl56j7k,.x78zum5.x1t2pt76 .xng8ra.x1ggkfyp {
+    /*posts*/
+    background-color: #5b4b33
+}
 .x6vvqcq{ 
     /*Elevated top*/
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     background-color: #7D6342
 }
+
 .x1p5oq8j.xwxc41k {
     /*Elevated bottom*/
     border-bottom-left-radius: 15px;
@@ -135,4 +144,9 @@
     /*Poll border*/
     border:solid 1.5px #CCBFA0;
 }
+.x1hc1fzr.x3oybdh, .x1lcra6a,.x14yjl9h.xz401s1, .xurb0ha .xvy4d1p, .x78zum5.xng8ra .xvy4d1p, .x120sd54,.xng8ra,.x1691je0{
+    /*sidebar*/
+    background-color: #56633f
+    }  
+
 }
