--- a/starry-threads.user.styl
+++ b/starry-threads.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Starry
 @namespace      https://userstyles.world/style/13154/starry-threads
-@version        0.1.1
+@version        0.2.0
 @description    A theme based on the night sky (in a cartoony way), best used in Threads's dark mode!
 @author         Bailey Lockheart
 ==/UserStyle== */
@@ -28,6 +28,14 @@
   --barcelona-threadline: #F9DB1D;
   --barcelona-menu-outline: #F9DB1D;
   --activity-icon-background-repost:#3149B5
+}
+html, .x1vfo065,.xfex06f, .xng8ra, .x1t2pt76,.xgzc8be.x1iorvi4, .x1iorvi4 .x8xoigl {
+    /*background*/
+    background-color: #172c8c
+}
+.xgzc8be, .x78zum5.x1t2pt76 .x78zum5.xng8ra,.x78zum5.x1t2pt76 .xfex06f.xl56j7k,.x78zum5.x1t2pt76 .xng8ra.x1ggkfyp {
+    /*posts*/
+    background-color: #172c8c
 }
 .x6vvqcq{ 
     /*Elevated top*/
@@ -130,4 +138,8 @@
     /*Poll border*/
     border:solid 1.5px #D1B5F2;
 }
+.x1lcra6a,.x14yjl9h.xz401s1, .xurb0ha .xvy4d1p, .x78zum5.xng8ra .xvy4d1p, .x120sd54,.xng8ra,.x1691je0{
+    /*sidebar*/
+    background-color:#595cca
+}    
 }
