--- a/canary-threads.user.styl
+++ b/canary-threads.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Canary
 @namespace      https://userstyles.world/style/13156/canary-threads
-@version        0.1.1
+@version        0.2.0
 @description    A theme based on Tumblr's Canary theme, best used in Threads's light mode!
 @author         Bailey Lockheart
 ==/UserStyle== */
@@ -28,6 +28,14 @@
   --barcelona-threadline: #FF8A00;
   --barcelona-menu-outline: #FF8A00;
   --activity-icon-background-repost:#FAFAC8
+}
+html, .x1vfo065,.xfex06f, .xng8ra, .x1t2pt76,.xgzc8be.x1iorvi4, .x1iorvi4 .x8xoigl {
+    /*background*/
+    background-color: #ffffe8
+}
+.xgzc8be, .x78zum5.x1t2pt76 .x78zum5.xng8ra,.x78zum5.x1t2pt76 .xfex06f.xl56j7k,.x78zum5.x1t2pt76 .xng8ra.x1ggkfyp {
+    /*posts*/
+    background-color: #ffffe8
 }
 .x6vvqcq{ 
     /*Elevated top*/
@@ -129,4 +137,9 @@
 .x1xmf6yo .xy80clv, .xy80clv.x13vifvy {
     /*Poll border*/
     border:solid 1.5px #FF8A00;
-}}
+}
+.x1lcra6a,.x14yjl9h.xz401s1, .xurb0ha .xvy4d1p, .x78zum5.xng8ra .xvy4d1p, .x120sd54,.xng8ra,.x1691je0{
+    /*sidebar*/
+    background-color:#fbfac8
+    }    
+}
